Updated link index.html

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         </section>
         <section id="contact">
             <h2>Contact</h2>
-            <p>https://linkedin.com/in/premiduseja</p>
+            <p><a href src='https://linkedin.com/in/premiduseja'> Connect with me - Linkedin</a></p>
         </section>
     </main>
     <footer>
