Corrected the link to linkedin in contact section

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         </section>
         <section id="contact">
             <h2>Contact</h2>
-            <p><a href src='https://linkedin.com/in/premiduseja'> Connect with me - Linkedin</a></p>
+            <a href="https://linkedin.com/in/premiduseja" target="_blank" rel="noopener">Connect with me - Linkedin</a>       
         </section>
     </main>
     <footer>
