--- a/index.html
+++ b/index.html
@@ -110,7 +110,10 @@
         </section>
         <section id="projects">
             <h2>Projects</h2>
-            <p>List of projects will go here.</p>
+            <ul>
+                <li>Project 1: <a href="https://github.com/premiduseja/spring-ehcache-manager-example/blob/main/README.md" target="_blank" rel="noopener">Ehcache example with cachemanager - Spring boot 3</a></li>
+                <li>Project 2: <a href="https://github.com/premiduseja/numerology/blob/main/README.md" target="_blank" rel="noopener">Numerology APIs</a></li>
+            </ul>
         </section>
         <section id="blogs">
             <h2>Blogs</h2>
